--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SonoVital - Seu Guia para Noites Melhores</title>
+    <title>SleepyPeepy - Seu Guia para Noites Melhores</title>
     <meta name="description" content="Transforme suas noites com o SonoVital. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
     <meta name="author" content="SonoVital" />
 
-    <meta property="og:title" content="SonoVital - Seu Guia para Noites Melhores" />
-    <meta property="og:description" content="Transforme suas noites com o SonoVital. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
+    <meta property="og:title" content="SleepyPeepy - Seu Guia para Noites Melhores" />
+    <meta property="og:description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
     <meta property="og:type" content="website" />
   </head>
 
