--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
 <!doctype html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SleepyPeepy - Seu Guia para Noites Melhores</title>
+    <meta name="description" content="Transforme suas noites com o SonoVital. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
+    <meta name="author" content="SonoVital" />
+    <meta property="og:title" content="SleepyPeepy - Seu Guia para Noites Melhores" />
+    <meta property="og:description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
+    <meta property="og:type" content="website" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SleepyPeepy - Seu Guia para Noites Melhores</title>
-  <meta name="description"
-    content="Transforme suas noites com o SonoVital. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
-  <meta name="author" content="SonoVital" />
+    <!-- Meta Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+      n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}
+      (window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init','785748124253019'); fbq('track','PageView');
+    </script>
+    <!-- End Meta Pixel Code -->
+  </head>
 
-  <meta property="og:title" content="SleepyPeepy - Seu Guia para Noites Melhores" />
-  <meta property="og:description"
-    content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
-  <meta property="og:type" content="website" />
+  <body>
+    <!-- noscript do Pixel TEM QUE ficar no BODY -->
+    <noscript>
+      <img height="1" width="1" style="display:none"
+           src="https://www.facebook.com/tr?id=785748124253019&ev=PageView&noscript=1" alt="" />
+    </noscript>
 
-  <!-- Meta Pixel Code -->
-  <script>
-    !function (f, b, e, v, n, t, s) {
-      if (f.fbq) return; n = f.fbq = function () {
-        n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-      };
-      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
-      n.queue = []; t = b.createElement(e); t.async = !0;
-      t.src = v; s = b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t, s)
-    }(window, document, 'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '785748124253019');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=785748124253019&ev=PageView&noscript=1" /></noscript>
-  <!-- End Meta Pixel Code -->
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+    <div id="root"></div>
+    <!-- Entrada do Vite -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
