--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SleepyPeepy - Seu Guia para Noites Melhores</title>
-    <meta name="description" content="Transforme suas noites com o SonoVital. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
-    <meta name="author" content="SonoVital" />
+    <meta name="description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
+    <meta name="author" content="SleepyPeepy" />
     <meta property="og:title" content="SleepyPeepy - Seu Guia para Noites Melhores" />
     <meta property="og:description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
     <meta property="og:type" content="website" />
