--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SleepyPeepy - Seu Guia para Noites Melhores</title>
     <meta name="description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
     <meta name="author" content="SleepyPeepy" />
-    <meta property="og:title" content="SleepyPeepy - Seu Guia para Noites Melhores" />
+    <meta property="og:title" content="SleepyPeepy - Seu guia para a tranquilidade!" />
     <meta property="og:description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
     <meta property="og:type" content="website" />
 
