--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SleepyPeepy - Seu Guia para Noites Melhores</title>
-    <meta name="description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
+    <title>SleepyPeepy - Seu Guia para Ansiedade e Insônia</title>
+    <meta name="description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a ansiedade e insônia." />
     <meta name="author" content="SleepyPeepy" />
     <meta property="og:title" content="SleepyPeepy - Seu guia para a tranquilidade!" />
-    <meta property="og:description" content="Transforme suas noites com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a insônia." />
+    <meta property="og:description" content="Transforme sua ansiedade com o SleepyPeepy. Projeto de 7 dias, exercícios, receitas relaxantes e produtos naturais para combater a ansiedade e insônia." />
     <meta property="og:type" content="website" />
 
     <!-- Meta Pixel Code -->
